# scanner

./: .gitignore  package-lock.json  package.json  scanner.db  vite.config.ts.timestamp-1666624472956.mjs
src/: App.svelte  stores.js  style.css  types.ts  util.ts
src-tauri/: .gitignore  Cargo.toml  README.md  errors.rs  scanner.db -sg  sqlx-data.json  tauri.conf.json
src-tauri/migrations/: 20221019143341_init.sql  20221025184658_config.sql  20221027191301_pools_passwords.sql  20221031212952_cannum.sql
src-tauri/src/: db.rs  frontier.rs  jobs.rs  main.rs  models.rs
src-tauri/src/db/: config.rs  mod.rs
src-tauri/src/db/models/: DbCan.rs  DbMiner.rs  DbRack.rs  can.rs  miner.rs  mod.rs  rack.rs
src-tauri/src/jobs/: locate.rs  logs.rs  miner.rs  pool.rs  profile.rs  reboot.rs  scan.rs  sleep.rs
src-tauri/src/models/: miner.rs
src/lib/: Can.svelte  Controls.svelte  Miner.svelte  Rack.svelte
src/lib/controls/: Dropdown.svelte  FileInput.svelte  FrontierDialog.svelte  Modal.svelte  PoolsDialog.svelte  RangeSlider.svelte  SettingsDialog.svelte  Table.svelte  Validation.svelte
src/lib/controls/tabs/: Tab.svelte  TabList.svelte  TabPanel.svelte  Tabs.svelte  tabs.js
