[package]
name = "anttools"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all", "clipboard", "dialog"] }
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

libminer = { git="https://github.com/stronghold-digital/libminer", features = ["all"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "macros", "sqlite", "offline"] }
csv = { version = "1" }
anyhow = "1.0"
phf = { version = "0.8", features = ["macros"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[build]
